@@ -79,6 +79,7 @@ Michael Sullivan <mike@trdlnk.com>
 Mike Meyer <mwm@mired.org>
 Miles Bader <miles@gnu.org>
 Neal H Walfield <neal@walfield.org>
+Neelkanth Natu <neelnatu@yahoo.com>
 OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>
 Pavel Roskin <pavel_roskin@geocities.com>
 Per Lundberg <plundis@byggdok.se>
